# yesbroker

./: .gitignore  .prettierignore  .prettierrc  log.txt  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  schema.sql
public/pkg/: package.json  wasm_bg.wasm
server/: .gitignore  Cargo.toml
server/contracts/: deploy_contracts.sh  remappings.txt
server/contracts/deployments/: 11155111.json  31337.json
server/contracts/src/: PdfVerifier.sol  PropertyVerifier.sol
server/contracts/test/: GSTVerifier.t.sol  PropertyVerifier.t.sol
server/lib/: Cargo.toml
server/lib/src/: lib.rs  tests.rs  utils.rs
server/program/src/: main.rs
server/script/: Cargo.toml  index.html
server/zkpdf-template/contracts/src/: GSTVerifier.sol
server/zkpdf-template/contracts/src/fixtures/: groth16-fixture.json
server/zkpdf-template/program/: Cargo.toml
src/app/: globals.css  layout.tsx  middleware.ts  page.tsx
src/app/api/auth/session/: route.ts
src/app/api/properties/: route.ts
src/app/api/property-interests/: route.ts
src/app/api/update-user-type/: route.ts
src/app/api/verify/: route.ts
src/app/atoms/: auth.ts  wallet.ts
src/app/auth/: page.tsx
src/app/component/: AddPropertyModal.tsx  AuthProvider.tsx  ImageUpload.tsx  InterestsModal.tsx  OwnerDashboard.tsx  PDFVerification.tsx  PropertyImageSlider.tsx  RenterDashboard.tsx  SelfLogin.tsx  WalletProvider.tsx
src/app/dashboard/: page.tsx
src/app/hook/: useAuth.tsx
src/app/libs/: api.ts  db.ts  s3.ts  wasm.ts
src/app/owner/dashboard/: page.tsx
src/app/renter/: dashboard.tsx
(+3 files in other folders)
